# package-publisher

./: .eslintrc.js  .gitignore  .gitlab-ci.yml  .publish-config.example.yaml  .publish-config.minimal.yaml  Cargo.toml  PHASE4_PLAN.md  README.ja.md  README.md  agent-definition.yaml  cli-analysis.json  jest.config.js  package.json  tasks.yml  tsconfig.json
.circleci/: config.yml
.cli-tests/: basic.bats  help.bats  multi-shell.bats  performance.bats  security.bats
.github/workflows/: cli-testing-specialist.yml  publish-multiregistry.yml  publish-npm.yml  rust-ci.yml
docs/: AGENT_INTEGRATION.md  CI_CD_INTEGRATION.md  CLI-TESTING-GUIDE.md  CLI_TESTING_REPORT.md  PLUGIN_DEVELOPMENT.md  README.md
docs/archives/: README.md  rust-migration-plan.md  rust-migration-review-report.md
docs/phase2/: PHASE2_MIGRATION_PLAN.md
examples/plugin-example/: README.md  package.json  tsconfig.json
src/: cli.ts  index.ts  lib.rs  main.rs
src/core/: BatchPublisher.ts  ConfigLoader.ts  ErrorHandling.ts  HookExecutor.ts  PackagePublisher.ts  PluginLoader.ts  PublishAnalytics.ts  PublishConfig.ts  PublishStateMachine.ts  RetryManager.ts  config.rs  config_loader.rs  error.rs  interfaces.ts  mod.rs  retry.rs  state_machine.rs  traits.rs
src/notifications/: EmailNotifier.ts  NotificationManager.ts  SlackNotifier.ts
src/orchestration/: analytics.rs  batch_publisher.rs  mod.rs  package_publisher.rs
src/plugins/: CratesIOPlugin.ts  HomebrewPlugin.ts  NPMPlugin.ts  PyPIPlugin.ts  crates_io_plugin.rs  homebrew_plugin.rs  mod.rs  npm_plugin.rs  plugin_loader.rs  pypi_plugin.rs
(+38 files in other folders)
