[package]
name = "package-publisher"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "package-publisher"
path = "src/bin/package-publisher.rs"

[dependencies]
aho-corasick = "1.1.4"
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
lazy_static = "1.5.0"
regex = "1.12.2"
secrecy = { version = "0.10.3", features = ["serde"] }
semver = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
uuid = { version = "1.11.0", features = ["v4"] }
walkdir = "2.5.0"

[dev-dependencies]
chrono = "0.4.42"
tempfile = "3.23.0"
